tests/ui/type/issue-91268.stderr
error: this file contains an unclosed delimiter
  --> $DIR/issue-91268.rs:9:12
   |
LL | fn main() {
   |           - unclosed delimiter
LL |     0: u8(ţ
   |          - ^
   |          |
   |          unclosed delimiter

error: this file contains an unclosed delimiter
  --> $DIR/issue-91268.rs:9:12
   |
LL | fn main() {
   |           - unclosed delimiter
LL |     0: u8(ţ
   |          - ^
   |          |
   |          unclosed delimiter

error: expected one of `.`, `;`, `?`, `}`, or an operator, found `:`
  --> $DIR/issue-91268.rs:8:11
   |
LL | fn main() {
   |           ^ unclosed delimiter
LL |     0: u8(ţ
   |      ^
   |      |
   |      expected one of `.`, `;`, `?`, `}`, or an operator
   |      help: `}` may belong here

error: aborting due to 3 previous errors

